# SmartCalc

./: .gitignore  CMakeLists.txt  Makefile  Makefile.mk  README.md  manual.texi  smartcalcv2.pro
Resources/: resources.qrc
docs/: manual.texi
smartcalc/: main.cc
smartcalc/controller/: controller.cc  controller.h  input_handler.cc  input_handler.h
smartcalc/model/: CMakeLists.txt  bank_calc.cc  bank_calc.h  basic_calc.cc  basic_calc.h  credit_calc.cc  credit_calc.h  deposit_calc.cc  deposit_calc.h  graph_calc.cc  graph_calc.h  model.cc  model.h  test-model.cc
smartcalc/types/: data_types.h
smartcalc/util/: calc_util.h  date_conv_util.h
smartcalc/view/: mainwindow.cc  mainwindow.h  mainwindow.ui  secondwindow.cc  secondwindow.h  secondwindow.ui
src/: main.cc
src/Controller/: controller.h  data_types.h
src/Model/: CMakeLists.txt  bank_calc.cc  bank_calc.h  basic_calc.cc  basic_calc.h  model.h  test-model.cc
src/View/: mainwindow.cc  mainwindow.h  mainwindow.ui  secondwindow.cc  secondwindow.h  secondwindow.ui
src/View/Forms/: mainwindow.ui
